--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <main class="flex justify-center">
         <div class="mockup-phone">
             <div class="mockup-phone-camera"></div>
-            <div class="mockup-phone-display grid place-content-center">
+            <div class="bg-base-200 mockup-phone-display flex flex-col items-center gap-4 p-4">
+                <div class="text-5xl font-bold mt-20">Payoo</div>
                 <!-- card start -->
-                <div class="hero bg-base-200 min-h-screen w-screen">
+                <div class="hero bg-base-200 w-screen">
                     <div class="hero-content flex-col w-screen">
                         <div class="">
                             <div class="card-body">
@@ -25,7 +26,7 @@
                                     <label class="label">Pin</label>
                                     <input id="pin-number" type="password" class="input" placeholder="your Pin" />
                                     <div><a class="link link-hover">Forgot pin?</a></div>
-                                    <button id="add-money-btn" class="btn btn-neutral mt-4">Add Money</button>
+                                    <button id="add-money-btn" class="btn btn-neutral mt-4">Log in</button>
                                 </fieldset>
                             </div>
                         </div>
