--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                     <label class="label">Pin</label>
                                     <input id="pin-number" type="password" class="input" placeholder="your Pin" />
                                     <div><a class="link link-hover">Forgot pin?</a></div>
-                                    <button id="add-money-btn" class="btn btn-neutral mt-4">Log in</button>
+                                    <button id="login-btn" class="btn btn-neutral mt-4">Log in</button>
                                 </fieldset>
                             </div>
                         </div>
