--- a/index.html
+++ b/index.html
@@ -11,29 +11,26 @@
 
 <body>
     <main class="flex justify-center">
-        <div class="mockup-phone">
-            <div class="mockup-phone-camera"></div>
-            <div class="bg-base-200 mockup-phone-display flex flex-col items-center gap-4 p-4">
-                <div class="text-5xl font-bold mt-20">Payoo</div>
-                <!-- card start -->
-                <div class="hero bg-base-200 w-screen">
-                    <div class="hero-content flex-col w-screen">
-                        <div class="">
-                            <div class="card-body">
-                                <fieldset class="fieldset">
-                                    <label class="label">Phone Number</label>
-                                    <input id="phone-number" type="text" class="input" placeholder="Your Phone Number" />
-                                    <label class="label">Pin</label>
-                                    <input id="pin-number" type="password" class="input" placeholder="your Pin" />
-                                    <div><a class="link link-hover">Forgot pin?</a></div>
-                                    <button id="login-btn" class="btn btn-neutral mt-4">Log in</button>
-                                </fieldset>
-                            </div>
+        <div class="bg-base-200 min-h-screen flex flex-col items-center gap-4 p-4">
+            <div class="text-5xl font-bold mt-20">Payoo</div>
+            <!-- card start -->
+            <div class="hero bg-base-200 w-screen">
+                <div class="hero-content flex-col w-screen">
+                    <div class="">
+                        <div class="card-body">
+                            <fieldset class="fieldset">
+                                <label class="label">Phone Number</label>
+                                <input id="phone-number" type="text" class="input" placeholder="Your Phone Number" />
+                                <label class="label">Pin</label>
+                                <input id="pin-number" type="password" class="input" placeholder="your Pin" />
+                                <div><a class="link link-hover">Forgot pin?</a></div>
+                                <button id="login-btn" class="btn btn-neutral mt-4">Log in</button>
+                            </fieldset>
                         </div>
                     </div>
                 </div>
-                <!-- card end -->
             </div>
+            <!-- card end -->
         </div>
     </main>
     <script src="js/login.js"></script>
